[package]
name = "pdf-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.8.1", package = "gtk4" }
gdk = { version = "0.8.1", package = "gdk4" }
glib = "0.16"
lopdf = "0.27"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
